chore(docker): compiles

--- a/config/database.yml
+++ b/config/database.yml
@@ -28,4 +28,5 @@ test:
 # ensure the database is located in a persisted volume.
 production:
   <<: *default
+  database: storage/production.sqllite3
   # database: path/to/persistent/storage/production.sqlite3
