--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "devDependencies": {
+  "dependencies": {
     "@babel/core": "^7.26.0",
     "@babel/plugin-transform-runtime": "^7.25.9",
     "@babel/preset-env": "^7.26.0",
@@ -41,7 +41,9 @@
     "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^4.15.2",
     "webpack-merge": "^5.10.0",
-    "whatwg-fetch": "^3.6.20"
+    "whatwg-fetch": "^3.6.20",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1"
   },
   "name": "index",
   "private": true,
@@ -57,9 +59,5 @@
   },
   "browserslist": [
     "defaults"
-  ],
-  "dependencies": {
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1"
-  }
+  ]
 }
