--- a/test/fixtures/energy_pricing_groups.yml
+++ b/test/fixtures/energy_pricing_groups.yml
@@ -1,9 +1,9 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  energy_pricing_plan: one
+  energy_pricing_plan_id: 1
   name: "Plan 1"
 
 two:
   name: "Plan 2"
-  energy_pricing_plan: two
+  energy_pricing_plan_id: 2
