--- a/package.json
+++ b/package.json
@@ -22,12 +22,15 @@
     "fork-ts-checker-webpack-plugin": "^9.0.2",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "lucide-react": "^0.460.0",
     "mini-css-extract-plugin": "^2.9.1",
     "postcss": "^8.4.47",
     "postcss-loader": "^8.1.1",
     "postcss-preset-env": "^10.0.8",
     "prettier": "^3.3.3",
+    "react": "^18.3.1",
     "react-apexcharts": "^1.5.0",
+    "react-dom": "^18.3.1",
     "react-router-dom": "^6.27.0",
     "shakapacker": "8.0.0",
     "tailwindcss": "^3.4.14",
@@ -41,9 +44,7 @@
     "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^4.15.2",
     "webpack-merge": "^5.10.0",
-    "whatwg-fetch": "^3.6.20",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "whatwg-fetch": "^3.6.20"
   },
   "name": "index",
   "private": true,
